Fix contrast on action box extra text

--- a/src/components/action-box/action-box.scss
+++ b/src/components/action-box/action-box.scss
@@ -170,7 +170,7 @@
 
   .acplInformation {
     position: relative;
-    color: mix($color-gray-dark, $color-gray-light, 30%);
+    color: mix($color-gray-dark, $color-gray-light, 60%);
     p {
       top: 0;
       position: absolute;
